--- a/index.html
+++ b/index.html
@@ -8,4 +8,32 @@
 <body>
     <p style= "color: blue;text-align: center; font-size: 40 px "> este es un parrafo corto </p> </p>
 </body>
+
+</html>
+
+<head>
+<style>
+    #titulo {
+color: blueviolet;
+
+    }
+#subtitulo {
+    color: blue;
+}
+
+#titulo2 { 
+
+    color: brown;
+}
+</style>
+
+</head>
+<body>
+<h1 id="titulo"> LA EVOLUCION DEL SER HUMANOO"</H1>
+<h2 id="subtitulo"> homo sapiens </h2>
+
+<h1 id="titulo2"> la era glaiciar</h1>
+
+    
+</body>
 </html>
