--- a/index.html
+++ b/index.html
@@ -34,6 +34,33 @@ color: blueviolet;
 
 <h1 id="titulo2"> la era glaiciar</h1>
 
-    
+
+<head>
+<style>
+.centrado {
+text-emphasis: center;
+font-size: 50px;
+color: blue;
+}
+
+p.noticia {
+    font-size: 50px;
+color: yellow;
+
+}
+
+
+
+</style> 
+</head>
+
 </body>
+
+<h1 class="centrado" > bienvenidos </h1>
+<p class="noticia " > noticia 1 </p>
+<p class="noticia "> noticia 2 </p>
+<p class="noticia "> noticia 3 </p>
+
+<body>
+    
 </html>
